@@ -1,5 +1,8 @@
 2016-11-22  Jakub Jelinek  <jakub@redhat.com>
 
+	PR middle-end/78416
+	* gcc.dg/torture/pr78416.c: New test.
+
 	PR tree-optimization/78445
 	* gcc.dg/pr78445.c: New test.
 
